// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ThemeToggle Component renders moon icon when theme is light 1`] = `
<DocumentFragment>
  <button
    aria-label="Switch to dark mode"
    class="p-2 rounded-xl bg-zinc-100 dark:bg-zinc-800/80 border border-zinc-200 dark:border-zinc-700/80 text-violet-600 dark:text-violet-400 hover:bg-zinc-200 dark:hover:bg-zinc-700 transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-violet-500 cursor-pointer"
    id="theme-toggle-btn"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-moon w-5 h-5"
        data-testid="moon-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`ThemeToggle Component renders sun icon when theme is dark 1`] = `
<DocumentFragment>
  <button
    aria-label="Switch to light mode"
    class="p-2 rounded-xl bg-zinc-100 dark:bg-zinc-800/80 border border-zinc-200 dark:border-zinc-700/80 text-violet-600 dark:text-violet-400 hover:bg-zinc-200 dark:hover:bg-zinc-700 transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-violet-500 cursor-pointer"
    id="theme-toggle-btn"
  >
    <div
      class="flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-sun w-5 h-5"
        data-testid="sun-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M12 20v2"
        />
        <path
          d="m4.93 4.93 1.41 1.41"
        />
        <path
          d="m17.66 17.66 1.41 1.41"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="m6.34 17.66-1.41 1.41"
        />
        <path
          d="m19.07 4.93-1.41 1.41"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;
